srcs/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ft-service-ingress
  labels:
    name: ft-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
        - path : /phpmyadmin
          backend:
            serviceName: phpmyadmin-svc
            servicePort: 80
        - path : /nginx
          backend:
            serviceName: nginx-svc
            servicePort: 80
